--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
     </div>
 
     <div class="container">
-        <h1 class="main-title">ARBAR STYLE</h1>
-        <div class="sub-title">@REAL ARBAR STAY ALONG 2026</div>
+        <h1 class="main-title">DAECILION'S</h1>
+        <div class="sub-title">@REAL MEMBER STAY ALL 2026</div>
         
         <div class="search-container">
             <input type="text" id="searchInput" class="search-box" placeholder="ค้นหาชื่อสมาชิก...">
@@ -315,7 +315,7 @@
 
             <a href="https://www.facebook.com/saturday.i.223550" class="member-card">
                 <div class="rank-badge badge-leader"><i class="fas fa-star"></i> LEADER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Elias Deacilion's </div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-leader">LEADER</div>
@@ -324,7 +324,7 @@
 
             <a href="https://www.facebook.com/spin.winterfell.delta" class="member-card">
                 <div class="rank-badge badge-leader"><i class="fas fa-star"></i> LEADER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Spin Daecilion's </div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-leader">LEADER</div>
@@ -333,7 +333,7 @@
 
             <a href="https://www.facebook.com/bryce.wtfxdelta" class="member-card">
                 <div class="rank-badge badge-leader"><i class="fas fa-star"></i> LEADER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Dxys Daecilion's </div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-leader">LEADER</div>
@@ -342,7 +342,7 @@
 
             <a href="https://www.facebook.com/minebxst.idc" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Fxil Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -351,7 +351,7 @@
 
             <a href="https://www.facebook.com/methurr.winterfell.delta" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Methur Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -360,7 +360,7 @@
 
             <a href="https://www.facebook.com/jasexyz" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Brook Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -369,7 +369,7 @@
 
             <a href="https://www.facebook.com/share/1ADffJhBNx/?mibextid=wwXIfr" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Pampam Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -378,7 +378,7 @@
 
             <a href="https://www.facebook.com/profile.php?id=61584447836487" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Akiz Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -387,7 +387,7 @@
 
             <a href="https://www.facebook.com/suea.threethousand" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Jack Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -396,7 +396,7 @@
 
             <a href="https://www.facebook.com/jackie.reallive" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Jackie Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -405,7 +405,7 @@
 
             <a href="https://www.facebook.com/justmin.winterfell.delta" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Justmin Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -414,7 +414,7 @@
 
             <a href="https://www.facebook.com/Japan.Already" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Jxpan Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -423,7 +423,7 @@
 
             <a href="https://www.facebook.com/Denim.Dcl" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Denim Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -432,7 +432,7 @@
 
             <a href="https://www.facebook.com/koko.seawthagsoy" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Koko Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -441,7 +441,7 @@
 
             <a href="https://www.facebook.com/king.unknxwprx" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Nongking Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -450,7 +450,7 @@
 
             <a href="https://www.facebook.com/junior.way.895957" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Nongmeepu Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -459,7 +459,7 @@
 
             <a href="https://www.facebook.com/myheart.wtfdelta" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Nongperq Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -468,7 +468,7 @@
 
             <a href="https://www.facebook.com/wasdssdd" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Nongmilo Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -477,7 +477,7 @@
 
             <a href="https://www.facebook.com/ph.th.ph.th.ph.th" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Pat Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -486,7 +486,7 @@
 
             <a href="https://www.facebook.com/wxn.uzi" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Wxn Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -495,7 +495,7 @@
 
             <a href="https://www.facebook.com/phonex.jrk" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Phonex Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -504,7 +504,7 @@
 
             <a href="https://www.facebook.com/highflex.maimoo" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Flex Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
@@ -513,7 +513,7 @@
 
             <a href="https://www.facebook.com/perce.wtfdelta" target="_blank" class="member-card">
                 <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
-                <img src="https://huge-violet-94i0z55znk.edgeone.app/ar.png" alt="Profile" class="member-img">
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
                 <div class="member-name">Perce Daecilion's</div>
                 <div class="member-group">DCL'S</div>
                 <div class="rank-text text-member">MEMBER</div>
