--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 <body>
 
     <div class="navbar">
-        <a href="https://arbar.netlify.app/" class="home-btn">HOME</a>
+        <a href="https://dcl-delta.netlify.app/" class="home-btn">HOME</a>
     </div>
 
     <div class="container">
