--- a/index.html
+++ b/index.html
@@ -541,6 +541,15 @@
                 <div class="fb-btn"><i class="fab fa-facebook-f"></i> Facebook</div>
             </a>
 
+            <a href="https://www.facebook.com/birka.wxthfakh" target="_blank" class="member-card">
+                <div class="rank-badge badge-member"><i class="fas fa-user"></i> MEMBER</div>
+                <img src="https://img2.pic.in.th/f7edfcdc-751a-449b-8bbf-45c93ab5c4b2.png" alt="Profile" class="member-img">
+                <div class="member-name">Nongbaiga Daecilion's</div>
+                <div class="member-group">DCL'S</div>
+                <div class="rank-text text-member">MEMBER</div>
+                <div class="fb-btn"><i class="fab fa-facebook-f"></i> Facebook</div>
+            </a>
+
         </div> 
     </div>
 
